[project]
name = "nonebot-plugin-aidraw"
version = "0.1.0"
description = "AI绘图插件 for NoneBot2，支持多种绘图API"
authors = [
    {name = "Agnes4m", email = "Z735803792@163.com"},
]
dependencies = [
    "nonebot2>=2.5.0",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "nonebot-plugin-alconna>=0.62.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nonebot_plugin_aidraw*"]
exclude = ["img*"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'
extend-exclude = ''''''

[tool.isort]
profile = "black"
line_length = 120
length_sort = false
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py310"
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q", "I"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.ruff.lint.isort]
length-sort = false
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportShadowedImports = false

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = ["nonebot_plugin_aidraw"]

[tool.nonebot.adapters]
"@local" = []

[dependency-groups]
dev = [
    "black>=26.5.0",
    "ruff>=0.15.13",
]
